[package]
name = "simple_agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.6", features = ["dynamic"] }
#bevy = { version = "0.6" }
rand = "0.8.4"
bevy-inspector-egui = "0.8.1"
bevy_prototype_lyon = "0.4.0"
